# gameEngine

./: CMakeLists.txt  README.md
.cache/clangd/index/: defines.h.7CDF062F7823C354.idx  main.cpp.E9B82D42821A46B9.idx
engine/: CMakeLists.txt  defines.h
engine/core/: logger.cpp  logger.h
engine/src/: main.cpp  main.h
engine/src/core/: logger.cpp  logger.h
testbed/: CMakeLists.txt
testbed/src/: test.cpp
